--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,14 @@
-# run 3 copies of the current job in parallel
-strategy:
-  fail-fast: false
-  matrix:
-    containers: [1, 2, 3]
-steps:
-  - name: Run split Cypress tests 
-    uses: cypress-io/github-action@v5
-    # pass the machine index and the total number
-    env:
-      SPLIT: ${{ strategy.job-total }}
-      SPLIT_INDEX: ${{ strategy.job-index }}
+name: Cypress Test in custom container
+on: [push]
+jobs:
+ cypress-test:
+   runs-on: ubuntu-20.04
+   name: Cypress Tests on docker container
+   # Cypress Docker image with Chrome v78
+   # and Firefox v70 pre-installed
+   container: cypress/browsers:node12.13.0-chrome78-ff70
+   steps:
+     - uses: actions/checkout@v3
+     - uses: cypress-io/github-action@v5
+       with:
+         browser: chrome
